# Automated-Python-Docstring-Generator

./: .pre-commit-config.yaml  DOCUMENTATION.md  EXAMPLES.md  QUICKSTART.md  README.md  milestone2_app.py  pyproject.toml  requirements.txt  test_bad.py
.github/workflows/: ci-docstring.yml
milestone2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pydocstringGenerator/: __init__.py
pydocstringGenerator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tools/: check_coverage.py
