[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydocstringGenerator"
version = "1.0.4"
description = "Automated Python Docstring Generator - Analyzes and generates docstrings in Google, NumPy, and reST formats"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Himanshu Chawla", email = "himanshu@example.com"}
]
keywords = ["docstring", "documentation", "ast", "pydocstyle", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Documentation",
]

dependencies = [
    "streamlit>=1.0.0",
    "plotly>=5.0.0",
    "pydocstyle>=6.0.0",
    "tomli>=1.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "coverage>=7.0.0",
    "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/HimanshuChawla2/Automated-Python-Docstring-Generator"
Documentation = "https://github.com/HimanshuChawla2/Automated-Python-Docstring-Generator/blob/main/DOCUMENTATION.md"


[tool.setuptools]
packages = ["pydocstringGenerator"]

[tool.docgen]
style = "Google"        # Google | NumPy | reST
rewrite = false         # false = only missing
module_doc = true       # auto insert module docstring
coverage_min = 90

[tool.pydocstyle]
convention = "google"
add-ignore = ["D202"]
match = "(?!test_).*\\.py"

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203"]

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312"]

